--- a/Biblioteczka/Views/Shared/Templates/_BookListAdmin.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_BookListAdmin.cshtml
@@ -7,7 +7,7 @@
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleDesc"})"><i class="bi bi-arrow-down"></i></a>
                 </th>
-                <th scope="col">Zdjęcie</th>
+                <th scope="col">Okładka</th>
                 <th scope="col"><label class="me-2">Autor</label>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "LastNameAsc"})"><i class="bi bi-arrow-up"></i></a>
                     <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "LastNameDesc"})"><i class="bi bi-arrow-down"></i></a>
