--- a/Biblioteczka/Views/Shared/Templates/_CopyList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_CopyList.cshtml
@@ -18,7 +18,7 @@
         </thead>
 
         <tbody>
-            @foreach (var Copy in @Model.Copies)
+            @foreach (var Copy in @Model.CopyList)
             {
                 <tr>
                     <td>@Copy.Number</td>
