--- a/Biblioteczka/Views/User/Index.cshtml
+++ b/Biblioteczka/Views/User/Index.cshtml
@@ -4,10 +4,10 @@
 
 @{
      ViewData["Title"] = "Użytkownicy";
-     string path = "/User";
 }
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
-<partial name="Templates/_SearchBar" model="@path"/>
+<partial name="Templates/_SearchBar" model="@Url.Action("Index")"/>
+
 <partial name="Templates/_UserList" model="@Model"/>
 <partial name="Templates/_Pagination" model="@Model"/>
