--- a/Biblioteczka/Views/Book/Create.cshtml
+++ b/Biblioteczka/Views/Book/Create.cshtml
@@ -13,7 +13,7 @@
             
             <div class="mb-3">
                 <label for="Title">Tytuł</label>
-                <input id="Title" name="Book.Title" type="text" class="form-control" minlength="3" maxlength="100" required>
+                <input id="Title" name="Book.Title" type="text" class="form-control" minlength="2" maxlength="100" required>
             </div>
 
             <div class="mb-3">
@@ -34,7 +34,7 @@
                    },
                 });
             </script>
-        
+
             <div class="mb-3">
                 <label for="Description">Opis</label>
                 <textarea id="Description" name="Book.Description" type="text" class="form-control" rows="4" minlength="3" maxlength="3000" required></textarea>
@@ -45,60 +45,15 @@
                 <input id="File" name="File" type="file" class="form-control" onchange="preview(this);" accept="image/jpg,image/png,image/jpeg,image/gif" required>
                 <img id="ImagePreview" name="ImagePreview" height="0" class="ms-auto me-auto d-block"/>
             </div>
-            <script>
-                function preview(File) { 
-                    if (fileExtensionValidate(File)==false) {  
-                        alert("Nieprawidłowy format pliku!");
-                        File.value = null;
-                        ImagePreview.src = null;
-                        ImagePreview.height = 0;
-                        ImagePreview.style.marginTop='0px';
-                    } 
-                    else if (fileSizeValidate(File)==false){
-                        alert("Nieprawidłowy rozmiar pliku!");
-                        File.value = null;
-                        ImagePreview.src = null;
-                        ImagePreview.height = 0;
-                        ImagePreview.style.marginTop='0px';
-                    }
-                    else {
-                        ImagePreview.src = URL.createObjectURL(event.target.files[0]);
-                        ImagePreview.height = 250;
-                        ImagePreview.style.marginTop='20px';
-                    }   
-                }
-                var validExtension = ".png, .gif, .jpeg, .jpg";
-                function fileExtensionValidate(file) {
-	                var filePath = file.value;
-	                var getFileExtension = filePath.substring(filePath.lastIndexOf('.') + 1).toLowerCase();
-	                var pos = validExtension.indexOf(getFileExtension);
-	                if (pos < 0) {
-		                return false;
-	                } else {
-		                return true;
-	                }
-                }
-                var maxSize = '2048'; //2 MB
-                function fileSizeValidate(file) {
-	                if (file.files && file.files[0]) {
-		                var fileSize = file.files[0].size / 1024;
-		                if (fileSize > maxSize) {
-			                return false;
-		                } else {
-			                return true;
-		                }
-	                }
-                }
-            </script>
-
+            
             <div class="mb-3">
                 <label for="Year">Rok</label>
-                <input id="Year" name="Book.Year" type="number" class="form-control" minlength="3" required>
+                <input id="Year" name="Book.Year" type="number" class="form-control" oninput="InpuNumber(this);" maxlength="4" required>
             </div>
 
             <div class="mb-3">
                 <label for="City">Miasto</label>
-                <input id="City" name="Book.City" type="text" class="form-control" minlength="3" maxlength="100" required>
+                <input id="City" name="Book.City" type="text" class="form-control" minlength="2" maxlength="100" required>
             </div>
 
             <partial name="Templates/_FormButton"/>
