--- a/Biblioteczka/Views/Copy/Create.cshtml
+++ b/Biblioteczka/Views/Copy/Create.cshtml
@@ -13,7 +13,7 @@
         
             <div class="mb-3">
                 <label for="Number">Numer</label>
-                <input id="Number" name="Copy.Number" type="text" class="form-control" minlength="3" maxlength="100" required>
+                <input id="Number" name="Copy.Number" type="number" class="form-control"  oninput="InpuNumber(this);" maxlength="10" required>
             </div>
 
             <div class="mb-3">
