--- a/Biblioteczka/Views/Loan/Index.cshtml
+++ b/Biblioteczka/Views/Loan/Index.cshtml
@@ -5,7 +5,7 @@
 @inject UserManager<AppUser> UserManager
 
 @{
-    ViewData["Title"] = "Wypożyczanie";
+    ViewData["Title"] = "Wypożyczone";
     string path = "/Loan";
 }
 
@@ -19,4 +19,4 @@ else if (SignInManager.IsSignedIn(User)){
     <partial name="Templates/_LoanList"/>
 }
 
-<partial name="Templates/_Pagination" model="@Model"/>
+<partial name="Templates/_Pagination" model="@Model.LoanList"/>
