--- a/Biblioteczka/Views/Reservation/Index.cshtml
+++ b/Biblioteczka/Views/Reservation/Index.cshtml
@@ -19,4 +19,4 @@ else if (SignInManager.IsSignedIn(User)){
     <partial name="Templates/_ReservationList"/>
 }
 
-<partial name="Templates/_Pagination" model="@Model"/>
+<partial name="Templates/_Pagination" model="@Model.ReservationList"/>
