--- a/Biblioteczka/Views/Shared/Templates/_BookList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_BookList.cshtml
@@ -2,20 +2,19 @@
     <table class="table table-hover table-responsive">
         <thead>
             <tr>
-                <th scope="col">Id</th>
                 <th scope="col"><label class="me-2">Tytuł</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleAsc"})"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleDesc"})"><i class="bi bi-arrow-down"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
                 </th>
-                <th scope="col">Zdjęcie</th>
+                <th scope="col">Okładka</th>
                 <th scope="col">Autor</th>
                 <th scope="col"><label class="me-2">Rok wydania</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearAsc"})"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearDesc"})"><i class="bi bi-arrow-down"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "YearDesc" })"><i class="bi bi-arrow-down"></i></a>
                 </th>
                 <th scope="col"><label class="me-2">Data dodania</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateAsc"})"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateDesc"})"><i class="bi bi-arrow-down"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Book", new { sortOrder = "DateDesc" })"><i class="bi bi-arrow-down"></i></a>
                 </th>  
             </tr>
         </thead>
@@ -24,7 +23,6 @@
             @foreach (var List in @Model.BookList)
             {
                 <tr>
-                    <th scope="row">@List.Book.Id</th>
                     <td class="col-3"><a class="text-decoration-none text-dark" asp-route-id="@List.Book.Id" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
                     <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
                     <td class="col-2"><a class="text-decoration-none text-dark" asp-route-id="@List.Book.AuthorId" asp-controller="Author" asp-action="Details">@List.Book.Author.Name @List.Book.Author.LastName</a></td>
