--- a/Biblioteczka/Views/Shared/Templates/_CopyListAdmin.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_CopyListAdmin.cshtml
@@ -8,46 +8,52 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Numer&nbsp;&nbsp;
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "NumberAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "NumberDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                <th scope="col"><label class="me-2">Tytuł</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
                 </th>
-                <th scope="col">Id Książki</th>
-                <th scope="col">Tytuł</th>
-                <th scope="col">Autor</th>
+                <th scope="col">Okładka</th>
+                <th scope="col"><label class="me-2">Autor</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Numer</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "NumberAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "NumberDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
                 <th scope="col">Status</th>
-                <th scope="col">Data&nbsp;&nbsp;
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "DateAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "DateDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                <th scope="col"><label class="me-2">Data dodania</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "DateAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "DateDesc" })"><i class="bi bi-arrow-down"></i></a>
                 </th>
                 <th scope="col" class="text-end"></th>
             </tr>
         </thead>
 
         <tbody>
-            @foreach (var Copy in @Model.CopyList)
+            @foreach (var List in @Model.CopyList)
             {
                 <tr>
-                    <th scope="row">@Copy.Id</th>
-                    <td>@Copy.Number</td>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Copy.BookId" asp-controller="Book" asp-action="Details">@Copy.Book.Id</a></td>
-                    <td><a class="text-decoration-none text-dark">@Copy.Book.Title</a></td>
-                    <td>@Copy.Book.Author.Name @Copy.Book.Author.LastName</td>
+                    <th scope="row">@List.Copy.Id</th>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Book.Id" asp-controller="Book" asp-action="Details">@List.Copy.Book.Title</a></td>
+                    <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Author.Id" asp-controller="Author" asp-action="Details">@List.Copy.Book.Author.Name @List.Copy.Book.Author.LastName</a></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Book.Id" asp-controller="Book" asp-action="Details">@List.Copy.Number</a></td>
 
-                    @if (Copy.Status=="0"){
+                    @if (List.Copy.Status=="0"){
                         <td>Niedostępna</td>
                     }
-                    else if (Copy.Status=="1"){
+                    else if (List.Copy.Status=="1"){
                         <td>Dostępna</td>
                     }
 
-                    <td>@Copy.Date</td>
+                    <td>@List.Copy.Date</td>
                     <td class="text-end">
-                        <a class="btn btn-success mb-1" asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
-                        @if (Copy.Status == "1"){
-                            <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Copy.Id"><i class="bi bi-trash3-fill"></i></a>
-                            <form asp-route-id="@Copy.Id" asp-controller="Copy" asp-action="Delete" method="post">
-                                <partial name="Templates/_ModalDelete" model="@Copy.Id"/>
+                        <a class="btn btn-success mb-1" asp-route-id="@List.Copy.Id" asp-controller="Copy" asp-action="Edit"><i class="bi bi-pencil-square"></i></a>
+                        @if (List.Copy.Status == "1"){
+                            <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@List.Copy.Id"><i class="bi bi-trash3-fill"></i></a>
+                            <form asp-route-id="@List.Copy.Id" asp-controller="Copy" asp-action="Delete" method="post">
+                                <partial name="Templates/_ModalDelete" model="@List.Copy.Id"/>
                             </form>
                         }
                     </td>
