--- a/Biblioteczka/Views/Shared/Templates/_LoanListAdmin.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_LoanListAdmin.cshtml
@@ -3,43 +3,57 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Id Użytkownika</th>
-                <th scope="col">Id Książki</th>
-                <th scope="col">Id Autora</th>
-                <th scope="col">Id Egzemplarza</th>
-                <th scope="col">Data wypożyczenia&nbsp;&nbsp;
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                <th scope="col"><label class="me-2">Użytkownik</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "UserNameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "UserNameDesc" })"><i class="bi bi-arrow-down"></i></a>
                 </th>
-                <th scope="col">Data oddania&nbsp;&nbsp;
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a>
+                <th scope="col"><label class="me-2">Tytuł</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Okładka</label></th>
+                <th scope="col"><label class="me-2">Autor</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Numer ezgemplarza</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "NumberAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "NumberDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Data wypożyczenia</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Data oddania</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateDesc" })"><i class="bi bi-arrow-down"></i></a>
                 </th>
                 <th scope="col" class="text-end"></th>
             </tr>
         </thead>
 
         <tbody>
-            @foreach (var Loan in @Model)
+            @foreach (var List in @Model.LoanList)
             {
                 <tr>
-                    <th scope="row">@Loan.Id</th>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Loan.UserBorrowingId" asp-controller="User" asp-action="Details">@Loan.UserBorrowingId</a></td>                
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Loan.BookId" asp-controller="Book" asp-action="Details">@Loan.BookId</a></td>
-                    <td><a class="text-decoration-none text-dark">@Loan.BookId</a></td>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Loan.BookId" asp-controller="Book" asp-action="Details">@Loan.CopyId</a></td>
-                    <td>@Loan.LoanDate</td>
-                    <td>@Loan.ReturnDate</td>
+                    <th scope="row">@List.Loan.Id</th>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Loan.UserBorrowingId" asp-controller="User" asp-action="Details">@List.User.UserName</a></td>                
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Loan.BookId" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
+                    <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Author.Id" asp-controller="Author" asp-action="Details">@List.Author.Name @List.Author.LastName</a></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Loan.BookId" asp-controller="Book" asp-action="Details">@List.Copy.Number</a></td>
+                    <td>@List.Loan.LoanDate</td>
+                    <td>@List.Loan.ReturnDate</td>
                     <td class="d-flex justify-content-end">
-                        @if (Loan.ReturnDate == null){
-                            <form asp-route-id="@Loan.Id" asp-controller="Loan" asp-action="Return" method="post">
+                        @if (List.Loan.ReturnDate == null){
+                            <form asp-route-id="@List.Loan.Id" asp-controller="Loan" asp-action="Return" method="post">
                                 <button type="submit" class="btn btn-success mb-1 me-1">Oddaj</button>
                             </form>
                         }
                         
-                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Loan.Id"><i class="bi bi-trash3-fill"></i></a>
-                        <form asp-route-id="@Loan.Id" asp-controller="Loan" asp-action="Delete" method="post">
-                            <partial name="Templates/_ModalDelete" model="@Loan.Id"/>
+                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@List.Loan.Id"><i class="bi bi-trash3-fill"></i></a>
+                        <form asp-route-id="@List.Loan.Id" asp-controller="Loan" asp-action="Delete" method="post">
+                            <partial name="Templates/_ModalDelete" model="@List.Loan.Id"/>
                         </form>
                   </td>
                 </tr>
