--- a/Biblioteczka/Views/Shared/Templates/_ReservationList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_ReservationList.cshtml
@@ -6,31 +6,44 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">Tytuł</th>
-                <th scope="col">Autor</th>
-                <th scope="col">Egzemplarz</th>
-                <th scope="col">Data</th>
+                <th scope="col"><label class="me-2">Tytuł</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Okładka</label></th>
+                <th scope="col"><label class="me-2">Autor</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Numer ezgemplarza</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "NumberAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "NumberDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Data</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
                 <th scope="col" class="text-end"></th>
             </tr>
         </thead>
 
         <tbody>
-            @foreach (var Reservation in @Model)
+            @foreach (var List in @Model.ReservationList)
             {
-                @if (Reservation.UserBorrowingId == @UserManager.GetUserId(User))
-                {
+                @if (List.Reservation.UserBorrowingId == @UserManager.GetUserId(User)){
                     <tr>  
-                        <td><a class="text-decoration-none text-dark" asp-route-id="@Reservation.BookId" asp-controller="Book" asp-action="Details">@Reservation.BookId</a></td>
-                        <td><a class="text-decoration-none text-dark" asp-route-id="@Reservation.BookId" asp-controller="Author" asp-action="Details"></a></td>
-                        <td><a class="text-decoration-none text-dark" asp-route-id="@Reservation.BookId" asp-controller="Book" asp-action="Details">@Reservation.CopyId</a></td>
-                        <td>@Reservation.Date</td>
+                        <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.BookId" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
+                        <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
+                        <td><a class="text-decoration-none text-dark" asp-route-id="@List.Author.Id" asp-controller="Author" asp-action="Details">@List.Author.Name @List.Author.LastName</a></td>
+                        <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.BookId" asp-controller="Book" asp-action="Details">@List.Copy.Number</a></td>
+                        <td>@List.Reservation.Date</td>
                         <td class="text-end">
                             @if (User.IsInRole("Admin")){
-                                <a class="btn btn-success mb-1" asp-route-id="@Reservation.Id" asp-controller="Loan" asp-action="Create">Wypożycz</a>
+                                <a class="btn btn-success mb-1" asp-route-id="@List.Reservation.Id" asp-controller="Loan" asp-action="Create">Wypożycz</a>
                             }
-                            <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Reservation.Id"><i class="bi bi-trash3-fill"></i></a>
-                            <form asp-route-id="@Reservation.Id" asp-controller="Reservation" asp-action="Delete" method="post">
-                                <partial name="Templates/_ModalDelete" model="@Reservation.Id"/>
+                            <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@List.Reservation.Id"><i class="bi bi-trash3-fill"></i></a>
+                            <form asp-route-id="@List.Reservation.Id" asp-controller="Reservation" asp-action="Delete" method="post">
+                                <partial name="Templates/_ModalDelete" model="@List.Reservation.Id"/>
                             </form>
                         </td>
                     </tr>
