--- a/Biblioteczka/Views/Shared/Templates/_ReservationListAdmin.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_ReservationListAdmin.cshtml
@@ -3,35 +3,49 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col">Id Użytkownika</th>
-                <th scope="col">Id Książki</th>
-                <th scope="col">Id Autora</th>
-                <th scope="col">Id Egzemplarza</th>
-                <th scope="col">Data&nbsp;&nbsp;
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateAsc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateDesc", searchString = ViewData["SearchString"] })"><i class="bi bi-arrow-down"></i></a></th>
+                <th scope="col"><label class="me-2">Użytkownik</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "UserNameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "UserNameDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Tytuł</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Okładka</label></th>
+                <th scope="col"><label class="me-2">Autor</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Numer ezgemplarza</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "NumberAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "NumberDesc" })"><i class="bi bi-arrow-down"></i></a>
+                </th>
+                <th scope="col"><label class="me-2">Data</label>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateAsc" })"><i class="bi bi-arrow-up"></i></a>
+                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateDesc" })"><i class="bi bi-arrow-down"></i></a></th>
                 <th scope="col" class="text-end"></th>
             </tr>
         </thead>
 
         <tbody>
-            @foreach (var Reservation in @Model)
+            @foreach (var List in @Model.ReservationList)
             {
                 <tr>
-                    <th scope="row">@Reservation.Id</th>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Reservation.UserBorrowingId" asp-controller="User" asp-action="Details">@Reservation.UserBorrowingId</a></td>                
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Reservation.BookId" asp-controller="Book" asp-action="Details">@Reservation.BookId</a></td>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Reservation.BookId" asp-controller="Author" asp-action="Details">@Reservation.BookId</a></td>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@Reservation.BookId" asp-controller="Book" asp-action="Details">@Reservation.CopyId</a></td>
-                    <td>@Reservation.Date</td>
+                    <th scope="row">@List.Reservation.Id</th>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.UserBorrowingId" asp-controller="User" asp-action="Details">@List.User.UserName</a></td>                
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.BookId" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
+                    <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Author.Id" asp-controller="Author" asp-action="Details">@List.Author.Name @List.Author.LastName</a></td>
+                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.BookId" asp-controller="Book" asp-action="Details">@List.Copy.Number</a></td>
+                    <td>@List.Reservation.Date</td>
                     <td class="text-end">
-                        <form asp-route-id="@Reservation.Id" asp-controller="Loan" asp-action="Create" method="post">
+                        <form asp-route-id="@List.Reservation.Id" asp-controller="Loan" asp-action="Create" method="post">
                             <button type="submit" class="btn btn-success mb-1">Wypożycz</button>
                         </form>
                         
-                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@Reservation.Id"><i class="bi bi-trash3-fill"></i></a>
-                        <form asp-route-id="@Reservation.Id" asp-controller="Reservation" asp-action="Delete" method="post">
-                            <partial name="Templates/_ModalDelete" model="@Reservation.Id"/>
+                        <a class="btn btn-danger mb-1" data-bs-toggle="modal" data-bs-target="#deleteModal_@List.Reservation.Id"><i class="bi bi-trash3-fill"></i></a>
+                        <form asp-route-id="@List.Reservation.Id" asp-controller="Reservation" asp-action="Delete" method="post">
+                            <partial name="Templates/_ModalDelete" model="@List.Reservation.Id"/>
                         </form>
                   </td>
                 </tr>
