--- a/Biblioteczka/Views/Shared/_Layout.cshtml
+++ b/Biblioteczka/Views/Shared/_Layout.cshtml
@@ -50,13 +50,13 @@
             <aside id="sidebar-wrapper" class="border-end bg-white">
                 <div class="sidebar-heading border-bottom bg-light">Zarządzanie</div>
                 <div class="list-group list-group-flush">
-                    <a class="sidebar-item list-group-item list-group-item-action p-3" asp-controller="Book" asp-action="Index"><i class="bi bi-book"></i><label class="ms-3">Książki</label></a>
-                    <a class="sidebar-item list-group-item list-group-item-action p-3" asp-controller="Author" asp-action="Index"><i class="bi bi-pen"></i><label class="ms-3">Autorzy</label></a>
-                    <a class="sidebar-item list-group-item list-group-item-action p-3" asp-controller="Copy" asp-action="Index"><i class="bi bi-bookshelf"></i><label class="ms-3">Ezgemplarze</label></a>
-                    <a class="sidebar-item list-group-item list-group-item-action p-3" asp-controller="Loan" asp-action="Index"><i class="bi bi-bookmark-check"></i><label class="ms-3">Wypożyczenia</label></a>
-                    <a class="sidebar-item list-group-item list-group-item-action p-3" asp-controller="Reservation" asp-action="Index"><i class="bi bi-calendar2-check"></i><label class="ms-3">Rezerwacje</label></a>
-                    <a class="sidebar-item list-group-item list-group-item-action p-3" asp-controller="User" asp-action="Index"><i class="bi bi-people"></i><label class="ms-3">Użytkownicy</label></a>
-                    <a class="sidebar-item list-group-item list-group-item-action p-3" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="bi bi-gear-wide"></i><label class="ms-3">Ustawienia</label></a>
+                    <a class="list-group-item list-group-item-action p-3" asp-controller="Book" asp-action="Index"><i class="bi bi-book"></i><label class="ms-3">Książki</label></a>
+                    <a class="list-group-item list-group-item-action p-3" asp-controller="Author" asp-action="Index"><i class="bi bi-pen"></i><label class="ms-3">Autorzy</label></a>
+                    <a class="list-group-item list-group-item-action p-3" asp-controller="Copy" asp-action="Index"><i class="bi bi-bookshelf"></i><label class="ms-3">Ezgemplarze</label></a>
+                    <a class="list-group-item list-group-item-action p-3" asp-controller="Loan" asp-action="Index"><i class="bi bi-bookmark-check"></i><label class="ms-3">Wypożyczenia</label></a>
+                    <a class="list-group-item list-group-item-action p-3" asp-controller="Reservation" asp-action="Index"><i class="bi bi-calendar2-check"></i><label class="ms-3">Rezerwacje</label></a>
+                    <a class="list-group-item list-group-item-action p-3" asp-controller="User" asp-action="Index"><i class="bi bi-people"></i><label class="ms-3">Użytkownicy</label></a>
+                    <a class="list-group-item list-group-item-action p-3" asp-area="Identity" asp-page="/Account/Manage/Index"><i class="bi bi-gear-wide"></i><label class="ms-3">Ustawienia</label></a>
                 </div>
             </aside>
         
@@ -71,6 +71,9 @@
         </div>
     }
     else {
+        <div id="page-title">
+            <h6 class="m-0">@ViewData["Title"]</h6>
+        </div>
         <main role="main" class="p-md-4 p-2">
             <div class="container">
                 @RenderBody()
