--- a/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Rejestracja"
 @model RegisterModel
 @{
 	ViewData["Title"] = "Register";
@@ -12,17 +12,22 @@
 		<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 		<div class="mb-3">
 			<label asp-for="Input.Email">Email</label>
-			<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+			<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" 
+				data-val-email="Pole Email nie jest prawidłowym adresem email." 
+				data-val-required="Pole Email jest wymagane."/>
 			<span asp-validation-for="Input.Email" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Input.Password">Hasło</label>
-			<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
+			<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" 
+				data-val-required="Pole Hasło jest wymagane."
+				data-val-length="Hasło musi mieć co najmniej 6 i maksymalnie 100 znaków." />
 			<span asp-validation-for="Input.Password" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="Input.ConfirmPassword">Potwierdź hasło</label>
-			<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+			<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true"
+				data-val-equalto="Hasło i hasło potwierdzające nie pasują do siebie."/>
 			<span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
 		</div>
 		<button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary mb-4">Zarejestruj się</button>
