--- a/Biblioteczka/Views/Author/Index.cshtml
+++ b/Biblioteczka/Views/Author/Index.cshtml
@@ -1,9 +1,11 @@
-﻿@{
+﻿@using X.PagedList
+@{
     ViewData["Title"] = "Autorzy";
+    Tuple<IPagedList<Author>, string, string> paginationData = new Tuple<IPagedList<Author>, string, string>(@Model, "Autorzy", "Index");
 }
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
 <partial name="Templates/_SearchBar" model="@Url.Action("Index")"/>
 
 <partial name="Templates/_AuthorList" model="@Model"/>
-<partial name="Templates/_Pagination" model="@Model"/>
+<partial name="Templates/_Pagination" model="@paginationData"/>
