--- a/Biblioteczka/Views/Book/Details.cshtml
+++ b/Biblioteczka/Views/Book/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Biblioteczka.Areas.Identity.Data
+@using X.PagedList
 
 @inject SignInManager<AppUser> SignInManager
 @inject UserManager<AppUser> UserManager
@@ -7,6 +8,7 @@
 @model BookViewModel
 @{
     ViewData["Title"] = "O książce";
+    Tuple<IPagedList<Copy>, string, string> paginationData = new Tuple<IPagedList<Copy>, string, string>(@Model.CopyList, "Ksiazki", "Szczegoly");
 }
 
 <partial name="Templates/_BackButton"/>
@@ -15,7 +17,7 @@
     <a class="btn btn-success mb-1 me-4 position-absolute end-0" asp-route-id="@Model.Book.Id" asp-controller="Book" asp-action="Edit"><i class="bi bi-pencil-square"><label class="ms-2">Edytuj</label></i></a>
 }
 
-<div class="col-sm-6 mx-auto bg-white rounded shadow d-flex">
+<div class="col-sm-6 mx-auto bg-white rounded shadow d-flex mb-3">
     <div class="col-4 p-3">
         <img class="image" src="~/images/@Model.Book.Image"/>
     </div>
@@ -34,4 +36,4 @@
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
 <partial name="Templates/_CopyList"/>
 
-<partial name="Templates/_PaginationDetails" model="@Model.CopyList"/>
+<partial name="Templates/_Pagination" model="@paginationData"/>
