--- a/Biblioteczka/Views/Shared/Templates/_Pagination.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_Pagination.cshtml
@@ -4,12 +4,17 @@
 @using X.PagedList.Web.Common;
 @using System.Web.Mvc;
 
+@{
+    string controllerName = @Model.Item2;
+    string actionName = @Model.Item3;
+}
+
 <div class="page-count text-center mt-3">
-    Strona @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) z @Model.PageCount
+    Strona @(Model.Item1.PageCount < Model.Item1.PageNumber ? 0 : Model.Item1.PageNumber) z @Model.Item1.PageCount
 </div>
 <div class="col-7 ms-auto me-auto mt-2 d-flex justify-content-center">
-    @Html.PagedListPager((IPagedList)@Model, page => 
-    Url.Action("Index", new { page, sortOrder = ViewData["SortOrder"], searchString = ViewData["SearchString"] }), 
+    @Html.PagedListPager((IPagedList)@Model.Item1, page => 
+    Url.Action(@actionName, @controllerName, new { page, id = ViewData["Id"] }), 
     new PagedListRenderOptions {
         LiElementClasses = new string[] { "page-item" },
         PageClasses = new string[] { "page-link" },
