--- a/Biblioteczka/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -14,7 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
                 <label asp-for="Input.Email" class="form-label">Email</label>
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />  
+                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true"
+                    data-val-email="Pole Email nie jest prawidłowym adresem email." 
+				    data-val-required="Pole Email jest wymagane."/>  
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <button type="submit" class="w-100 btn btn-lg btn-primary mb-4">Resetuj hasło</button>
