--- a/Biblioteczka/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Ustawienia/Haslo"
 @model ChangePasswordModel
 @{
     ViewData["Title"] = "Zmień hasło";
@@ -12,18 +12,22 @@
         <form id="change-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
-                <label asp-for="Input.OldPassword" class="form-label">Stare hasło</label>
-                <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" />
+                <label asp-for="Input.OldPassword" class="form-label">Aktualne hasło</label>
+                <input asp-for="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true"
+                    data-val-required="Pole Aktualne hasło jest wymagane."/>
                 <span asp-validation-for="Input.OldPassword" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="Input.NewPassword" class="form-label">Nowe hasło</label>
-                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                <input asp-for="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" 
+                    data-val-required="Pole Nowe hasło jest wymagane."
+                    data-val-length="Nowe hasło musi mieć co najmniej 6 i maksymalnie 100 znaków." />
                 <span asp-validation-for="Input.NewPassword" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="Input.ConfirmPassword" class="form-label">Potwierdź hasło</label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true"
+                    data-val-equalto="Nowe hasło i hasło potwierdzające nie pasują do siebie."/>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <button type="submit" class="w-100 btn btn-lg btn-primary mb-4">Zapisz</button>
