--- a/Biblioteczka/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Ustawienia/Email"
 @model EmailModel
 @{
     ViewData["Title"] = "Zarządzaj adresem email";
@@ -28,7 +28,9 @@
             }
             <div class="mb-3">
                 <label asp-for="Input.NewEmail" class="form-label">Nowy email</label>
-                <input asp-for="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true" />
+                <input asp-for="Input.NewEmail" class="form-control" autocomplete="email" aria-required="true"
+                    data-val-email="Pole Nowy email nie jest prawidłowym adresem email."
+                    data-val-required="Pole Nowy email jest wymagane." />
                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
             </div>
             <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="w-100 btn btn-lg btn-primary mb-4">Zapisz</button>
