--- a/Biblioteczka/Views/Book/Index.cshtml
+++ b/Biblioteczka/Views/Book/Index.cshtml
@@ -1,6 +1,8 @@
-﻿@model BookViewModel
+﻿@using X.PagedList
+@model BookViewModel
 @{
     ViewData["Title"] = "Książki";
+    Tuple<IPagedList<BookViewModel>, string, string> paginationData = new Tuple<IPagedList<BookViewModel>, string, string>(@Model.BookList, "Ksiazki", "Index");
 }
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
@@ -21,4 +23,4 @@ else {
     </div>
 </div>
 
-<partial name="Templates/_Pagination" model="@Model.BookList"/>
+<partial name="Templates/_Pagination" model="@paginationData"/>
