--- a/Biblioteczka/Views/User/Role.cshtml
+++ b/Biblioteczka/Views/User/Role.cshtml
@@ -17,8 +17,9 @@
 
             <div class="mb-3">
                 <select name="Role" class="form-control">
-                <option value="Admin">Administrator</option>
-                <option value="User">Zwykły użytkownik</option>
+                    <option value="User" selected>Zwykły użytkownik</option>
+                    <option value="Librarian">Bibliotekarz</option>
+                    <option value="Admin">Administrator</option>
                 </select>
             </div>
 
